<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp">
        <TextView
            android:id="@+id/necessary_thing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/necessary_thing"
            android:textColor="@color/colorBlack_title"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/necessary_thing1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/necessary_thing"
            android:text="@string/necessary_thing1"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp"/>

        <TextView
            android:id="@+id/necessary_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey_line"
            android:layout_below="@id/necessary_thing1"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/necessary_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_line"
            android:text="@string/necessary_life"
            android:textColor="@color/colorBlack_title"
            android:layout_marginTop="14dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/necessary_life1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_life"
            android:text="@string/necessary_life1"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp"/>
        <TextView
            android:id="@+id/necessary_wash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_life1"
            android:text="@string/necessary_wash"
            android:textColor="@color/colorBlack_title"
            android:layout_marginTop="14dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/necessary_wash1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_wash"
            android:text="@string/necessary_wash1"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp"/>
        <TextView
            android:id="@+id/necessary_clothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_wash1"
            android:text="@string/necessary_clothes"
            android:textColor="@color/colorBlack_title"
            android:layout_marginTop="14dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/necessary_clothes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_clothes"
            android:text="@string/necessary_clothes1"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp"/>
        <TextView
            android:id="@+id/necessary_dormitory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_clothes1"
            android:text="@string/necessary_dormitory"
            android:textColor="@color/colorBlack_title"
            android:layout_marginTop="14dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/necessary_dormitory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_dormitory"
            android:text="@string/necessary_dormitory1"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp"/>
        <TextView
            android:id="@+id/necessary_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_dormitory1"
            android:text="@string/necessary_personal"
            android:textColor="@color/colorBlack_title"
            android:layout_marginTop="14dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/necessary_personal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/necessary_personal"
            android:text="@string/necessary_personal1"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp"/>
    </RelativeLayout>

</ScrollView>
