<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tv_qqgroup_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qqgroup_college"
            android:textSize="18sp"
            android:textColor="@color/colorBlack_title" />
        <TextView
            android:id="@+id/tv_qqgroup_college1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_qqgroup_college"
            android:layout_marginTop="12dp"
            android:text="@string/qqgroup_college1"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp" />

        <TextView
            android:id="@+id/qqgroup_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey_line"
            android:layout_below="@id/tv_qqgroup_college1"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/tv_qqgroup_hometown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qqgroup_line"
            android:layout_marginTop="14dp"
            android:text="@string/qqgroup_hometown"
            android:textSize="18sp"
            android:textColor="@color/colorBlack_title" />
        <TextView
            android:id="@+id/tv_qqgroup_hometown1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_qqgroup_hometown"
            android:layout_marginTop="12dp"
            android:text="@string/qqgroup_hometown1"
            android:textSize="14sp"
            android:textColor="@color/colorGrey_content"
            android:lineSpacingExtra="8dp" />
    </RelativeLayout>


</ScrollView>
